# oasys

./: .gitignore  LICENSE  README.md  RELEASE.md  config.yaml  install.sh  oasys_launcher.sh  pyproject.toml  requirements.txt
docs/: SKILLS_AND_PLUGINS.md
oasys/: __init__.py  app.py  config_default.yaml  files.py  keystore.py  marketplace.py  plugins.py  router.py  session.py  settings.py  setup_wizard.py  skills.py  tools.py
oasys/plugins/: file_ops.py  git_ops.py  memory_notes.py  summarize_changes.py  sysinfo.py  web_fetch.py
oasys/providers/: __init__.py  base.py  generic.py  openrouter.py
oasys/skills/fastapi-service/: SKILL.md
oasys/skills/file-operations/: SKILL.md
oasys/skills/git-operations/: SKILL.md
oasys/skills/summarize-changes/: SKILL.md
oasys/skills/system-info/: SKILL.md
